--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "fakesever": "json-server --watch src/api/jsonDB/data.json --port 8080",
+    "fakesever": "json-server --watch src/api/jsonDB/db.js --port 8080",
     "dev": "yarn fakesever | yarn start"
   },
   "eslintConfig": {
