--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwind-merge": "^1.9.0",
+    "tailwindcss": "^3.2.4"
   }
 }
