--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
   "include": [
     "src"
   ],
-  "extends": "./tsconfig.paths.json"
+  // "extends": "./tsconfig.paths.json"
+  "extends": "./tsconfig-extends.json"
 }
