--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,13 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": [
-				"src/*"
+				"src/*",
+			],
+			"@WorldCup/*": [
+				"src/components/WorldCupModule/*"
+			],
+			"@BallAnimate/*": [
+				"src/components/BallAnimate/*"
 			]
 		}
 	}
